# galaxy

./: .gitignore  .gitmodules  Cargo.toml
go/: bus.go  go.mod  go.sum  recorder.go  sniffer.go
go/cmd/bus/: bus  bus.go
go/cmd/serialsniff/: dump.go  main.go  packets.go  serialsniff  sniff.go  sniffer.go  sniffer_test.go
scad/psu-box/: box.scad  box_bottom.scad  box_top.scad  galaxy_psu_box_bottom_0.3mm_PLA_MK3S_3h57m.gcode  galaxy_psu_box_top_0.3mm_PLA_MK3S_3h35m.gcode  galaxy_psu_box_top_0.3mm_PLA_MK3S_3h43m.gcode
scripts/: analyse.py  bus.py  decoders.py  logger.py
src/: lib.rs  main.rs
src/keypad/: manager.rs
src/serial/: manager.rs  message.rs  mod.rs
src/serial/devices/: keypad.rs
src/serial/galaxy/: bus.rs  crc.rs  mod.rs
