[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
crossbeam = "0.8.2"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.20"
priority-queue = "1.3.2"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.4"
